--- a/main.css
+++ b/main.css
@@ -1,29 +1,25 @@
-*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
-
+/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
+/*Some Variable Declarations*/
 html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4; }
 
 ::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
+  background: #b3d4fc;
+  text-shadow: none; }
 
 ::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
+  background: #b3d4fc;
+  text-shadow: none; }
 
 hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0; }
 
 audio,
 canvas,
@@ -31,171 +27,85 @@ iframe,
 img,
 svg,
 video {
-    vertical-align: middle;
-}
+  vertical-align: middle; }
 
 fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
+  border: 0;
+  margin: 0;
+  padding: 0; }
 
 textarea {
-    resize: vertical;
-}
+  resize: vertical; }
 
 .browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0; }
 
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
 body {
-	padding-top: 2rem;
-	padding-bottom: 2rem;
-}
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
 
+.jumbotron {
+  background-size: cover;
+  position: relative; }
+  .jumbotron #your-name {
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 10px; }
 
+.partly-cloudy-day {
+  color: black;
+  background-color: #faf3dd; }
 
+.cloudy {
+  color: #bdc1b8;
+  background-color: #a7aaa7; }
 
+.clear-day {
+  color: #f2f3ae;
+  background-color: #edd382; }
 
+.snow {
+  color: #868b96;
+  background-color: #275e82; }
 
+.fog {
+  color: #df9219;
+  background-color: #4b5962; }
 
+.night {
+  color: #75336f;
+  background-color: #500d54; }
 
+.clear-day-image {
+  background-image: url(img/sunny.jpg); }
 
+.partly-cloudy-day-image {
+  background-image: url(img/pcloudy.jpg); }
 
+.cloudy-image {
+  background-image: url(img/cloudy.jpg); }
 
+.rain-image {
+  background-image: url(img/rain.jpg); }
 
+.snow-image {
+  background-image: url(img/snow.jpg); }
 
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
+.sleet-image {
+  background-image: url(img/sleet.jpg); }
 
-@media only screen and (min-width: 35em) {
+.wind-image {
+  background-image: url(img/wind.jpg); }
 
-}
+.fog-image {
+  background-image: url(img/fog.jpg); }
 
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
+.clear-night-image {
+  background-image: url(img/clear-night.jpg); }
 
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-.invisible {
-    visibility: hidden;
-}
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
+/*# sourceMappingURL=main.css.map */
