--- a/main.css
+++ b/main.css
@@ -52,6 +52,8 @@ body {
 
 .jumbotron {
   background-size: cover;
+  background-position: middle;
+  height: 100vh;
   position: relative; }
   .jumbotron #your-name {
     background-color: rgba(255, 255, 255, 0.5);
