--- a/styles.scss
+++ b/styles.scss
@@ -86,6 +86,8 @@ body {
 
 .jumbotron {
 	background-size: cover;
+	background-position: middle;
+	height: 100vh;
 	position: relative;
 	#your-name {
 		background-color: rgba(255,255,255,.5);
